# hackaton-energy-game

./: .gitignore  .pre-commit-config.yaml  README.md  generation.py  playground.ipynb  pyproject.toml  requirements.txt  streamlit_app.py  tasks_and_ideas.txt
classes/: generation.py  generator.py  generators.py  playground.ipynb
data/: get_demand_curve.py  norway_demand.xlsx
energy_game/: calculate_production.py  streamlit_app.py
energy_game/classes/: generators.py  wind_power.py
energy_game/data/: Solar_and_WindOnOffshore__watt_produced_per_watt_installed.csv  get_demand_curve.py
src/: streamlit_app.py
src/data/: norway_demand.xlsx
tasks/: carbon_emissions_per_energy.csv  carbon_tax_cost.csv  sustainability_score.csv  tasks_and_ideas.md  tasks_and_ideas.txt
