[tool.poetry]
name = "energy_game"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.28.0"
icecream = "^2.1.3"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
scipy = "^1"
streamlit = "^1.30.0"
altair = "^5.2.0"
numpy = "^1.26.3"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
